# haskell-web-service

./: LICENSE  Procfile  README.md  coding-challenge.cabal  stack.yaml
.github/workflows/: haskell.yml  main.yml
src/: App.hs  Main.hs  User.hs  users.json
test/: MainSpec.hs
