name:                coding-challenge
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/coding-challenge#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable coding-challenge
  hs-source-dirs:      src
  main-is: Main.hs
  default-language:    Haskell2010
  other-modules: App
  ghc-options:
    -Wall
  build-depends:
    base >= 4.7 && < 5
    , scotty
    , aeson
    , warp >= 3.3.19
    , wai >= 3.2.3

test-suite spec
  main-is:
    MainSpec.hs
  type:
    exitcode-stdio-1.0
  ghc-options:
    -Wall
  hs-source-dirs:
      src
    , test
  other-modules: App
  build-depends:
    base >= 4.7 && < 5
    , scotty
    , aeson
    , warp >=3.3.19
    , wai >= 3.2.3
    , HUnit
    , wai-test
    , hspec
    , hspec-wai
    , hspec-wai-json
    , hspec-expectations
